[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "piper-sample-generator"
version     = "3.1.0"
license     = {text = "Apache-2.0"}
description = "Generate Piper TTS samples for microWakeWord trainer workflows"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["piper", "sample", "tts", "wakeword"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"
dependencies = [
    "piper-tts>=1.3.0,<2",
    "piper-phonemize==1.1.0",
    "torch>=2,<3",
    "torchaudio",
    "numpy",
]

[tool.setuptools]
platforms = ["any"]
zip-safe  = true

[tool.setuptools.packages.find]
include = []
